<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/backgroundFragments"
		android:id="@+id/fragment_analyzer"
>

	<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:paddingLeft="15dp" android:paddingRight="15dp">

		<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="wrap_content"
				android:layout_height="200dp" app:srcCompat="@drawable/security_server_color_primary"
				android:id="@+id/imageView"
				android:layout_gravity="center"
				android:foregroundGravity="center"
				android:layout_marginTop="70dp"
				android:layout_marginBottom="10dp"
				android:maxHeight="200dp" android:maxWidth="200dp"/>
		<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/try_test_text_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/test_server_ssl"
				android:textColor="@color/textColorFragments"
				android:layout_gravity="center"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="30dp"
				android:textSize="24sp" android:fontFamily="sans-serif"/>

		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/domain_input_layout"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:focusable="true"
				android:focusableInTouchMode="true"
		>
			<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/domain_input_edit_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:hint="@string/domain" android:layout_marginBottom="10dp"/>
		</com.google.android.material.textfield.TextInputLayout>


		<com.google.android.material.button.MaterialButton
				android:id="@+id/try_test_button"
				style="@style/Widget.MaterialComponents.Button.TextButton"
				android:text="@string/scan_web_page"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:backgroundTint="#ffffffff"
				android:gravity="center"
				app:cornerRadius="5dp"
				android:textColor="@color/textColorFragments"

				android:layout_marginBottom="20dp"/>


	</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
